--- a/package.json
+++ b/package.json
@@ -11,26 +11,44 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.5",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@vercel/blob": "^2.0.0",
+    "assemblyai": "^4.22.1",
+    "bytes": "^3.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.29.3",
+    "date-fns": "^4.1.0",
+    "dev": "^0.1.3",
     "inngest": "^3.46.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
+    "openai": "^6.15.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "react-dropzone": "^14.3.8",
+    "react-social-icons": "^6.25.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
+    "@types/bytes": "^3.1.5",
+    "@types/date-fns": "^2.6.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-dropzone": "^5.1.0",
     "babel-plugin-react-compiler": "1.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "zod": "^4.2.1"
   }
 }
